--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Labas!</p>
+    <p>Welcome!</p>
+        <nav>
+        <a href="pages/about.html">About</a>
+        <a href="pages/terms.html">Terms and conditions</a>
+    </nav>
 </body>
 </html>
