--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+	<meta property="og:title" content="RitzyRa page" />
+	<meta property="og:description" content="Welcome to the world of IT!" />
+	<meta property="og:image" content="https://i.imgur.com/bBM0E7X.jpeg" />
+    <meta property="title" content="RitzyRA" />
+    <meta property="description" content="Welcome to the world of IT!" />
+    <link rel="canonical" href="https://ritzyra.github.io/" />
+    <title>RitzyRA</title>
 </head>
 <body>
     <p>Welcome!</p>
