--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 	<meta property="og:title" content="RitzyRa page" />
 	<meta property="og:description" content="Welcome to the world of IT!" />
-	<meta property="og:image" content="https://i.imgur.com/ayDWpNf.png" />
+	<meta property="og:image" content="https://i.imgur.com/GOEfBCc.jpg" />
     <meta property="title" content="RitzyRA" />
     <meta property="description" content="Welcome to the world of IT!" />
     <link rel="canonical" href="https://ritzyra.github.io/" />
