--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <meta property="title" content="RitzyRA" />
     <meta property="description" content="Welcome to the world of IT!" />
     <link rel="canonical" href="https://ritzyra.github.io/" />
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4W6ZLQY5EX"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-4W6ZLQY5EX');
+	</script>
+	
     <title>RitzyRA</title>
 </head>
 <body>
