--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="canonical" href="https://ritzyra.github.io/" />
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-4W6ZLQY5EX"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-SFTZBB6DV5"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
-	  gtag('config', 'G-4W6ZLQY5EX');
+	  gtag('config', 'G-SFTZBB6DV5');
 	</script>
 	
     <title>RitzyRA</title>
