--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-	<meta property="og:title" content="RitzyRa page" />
+	<meta property="og:title" content="RitzyRA page" />
 	<meta property="og:description" content="Welcome to the world of IT!" />
 	<meta property="og:image" content="https://i.imgur.com/GOEfBCc.jpg" />
     <meta property="title" content="RitzyRA" />
