--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
     </header>
     <img src="franksinatra.jpg" alt="Frank Sinatra" width="500px" title="Frank Sinatra">
     <p id="date">1915-1998</p>
-    <h2>Short Introduction</h2>
+    <div>
+        <h2>Short Introduction</h2>
     <p>
         <strong>Frank Sinatra</strong>, in full <strong>Francis Albert Sinatra</strong>, (born December 12, 1915,
         Hoboken, New Jersey, U.S.—died May 14, 1998, Los Angeles, California), American singer and motion-picture actor
         who, through a long career and a very public personal life, became one of the most sought-after performers in
         the entertainment industry; he is often hailed as the greatest American singer of 20th-century popular music.
     </p>
+    </div>
+    <div>
     <h2>Discography</h2>
     <h3>Studio albums</h3>
     <p>
@@ -112,6 +115,7 @@
         <li>Duets II (1994)</li>
     </ul>
     </p>
+    </div>
     <footer>
         For more information go to <a href="https://en.wikipedia.org/wiki/Frank_Sinatra">this link</a>.
     </footer>
