--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </p>
     </div>
     <footer>
-        For more information go to <a href="https://en.wikipedia.org/wiki/Frank_Sinatra">this link</a>.
+        For more information go to <a href="https://en.wikipedia.org/wiki/Frank_Sinatra" target="_blank">this link</a>.
     </footer>
 </body>
 
