--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
         <h1>Frank Sinatra</h1>
     </header>
-    <img src="franksinatra.jpg" alt="Frank Sinatra" width="500px" title="Frank Sinatra">
+    <img src="franksinatra.jpg" alt="Frank Sinatra" width="500" title="Frank Sinatra">
     <p id="date">1915-1998</p>
     <div>
         <h2>Short Introduction</h2>
