--- a/menu.html
+++ b/menu.html
@@ -12,8 +12,12 @@
             list-style: none;
             margin: 0;
             padding: 0;
-            background: rgb(196, 43, 43);
             width: fit-content;
+        }
+
+        .nav li {
+            background: rgb(196, 43, 43);
+            border-radius: 10px;
         }
 
         .nav ul:before,
@@ -37,17 +41,22 @@
             line-height: 1.2em;
             color: #fff;
             border: 1px solid white;
-
+            /* border-left: 1px solid #595959;
+            border-right: 1px solid #595959; */
         }
 
         .nav a:hover {
             text-decoration: none;
-            background:red;
+            background: red;
             border-radius: 10px;
         }
 
+        .nav li:hover {
+            background-color: red;
+        }
+
         .nav li ul {
-            background:red;
+            background: transparent;
         }
 
         .nav li ul li {
@@ -59,7 +68,7 @@
         }
 
         .nav li ul a:hover {
-            background: rgba(0, 0, 0, 0.2);
+            background: red;
             border-radius: 10px;
         }
 
@@ -82,7 +91,6 @@
             opacity: 1;
             filter: alpha(opacity=100);
         }
-        
     </style>
 </head>
 
