--- a/flexNav.html
+++ b/flexNav.html
@@ -19,6 +19,8 @@
         nav {
             border-bottom: 2px solid #ff0000;
             margin: inherit;
+            display: flex;
+            justify-content: space-evenly;
         }
 
         div {
@@ -34,14 +36,10 @@
         div:hover {
             border-bottom: 2px solid #ff0000;
         }
-
-        .container {
-            display: flex;
-            justify-content: space-evenly;
-        }
+        
     </style>
     <nav>
-        <div class="container">
+        <div>
             <div>Home</div>
             <div>About</div>
             <div>News</div>
