--- a/cvSuTAB(mine).html
+++ b/cvSuTAB(mine).html
@@ -328,8 +328,8 @@
                 </div> -->
 
                 <div class="full_info">
-                    <input type="radio" id="tabfree" name="mytabs" checked="checked">
-                    <label for="tabfree">Experience</label>
+                    <input type="radio" id="tabExperience" name="mytabs" checked="checked">
+                    <label for="tabExperience">Experience</label>
                     <div class="full_info_item experience">
                         <div class="title">WORK EXPERIENCE</div>
 
@@ -383,8 +383,8 @@
                             </ul>
                         </div>
                     </div>
-                    <input type="radio" id="tabgold" name="mytabs">
-                    <label for="tabgold">Education</label>
+                    <input type="radio" id="tabEducation" name="mytabs">
+                    <label for="tabEducation">Education</label>
                     <div class="full_info_item tab education">
                         <div class="title">EDUCATION</div>
 
@@ -421,8 +421,8 @@
                             </ul>
                         </div>
                     </div>
-                    <input type="radio" id="tabsilver" name="mytabs">
-                    <label for="tabsilver">Contact</label>
+                    <input type="radio" id="tabContact" name="mytabs">
+                    <label for="tabContact">Contact</label>
                     <div class="full_info_item contact tab">
                         <div class="title">CONTACT</div>
 
