--- a/projektas/work_experience.html
+++ b/projektas/work_experience.html
@@ -79,21 +79,21 @@
     <nav class="nav">
         <ul>
             <li>
-                <a href="/index.html">PRADŽIA</a>
+                <a href="/projektas/index.html">PRADŽIA</a>
             </li>
             <li>
-                <a href="/cv.html">CV</a>
+                <a href="/projektas/cv.html">CV</a>
             </li>
             <li>
-                <a href="/work_experience.html">DARBAI <i class="fas fa-angle-down"></i></a>
+                <a href="/projektas/work_experience.html">DARBAI <i class="fas fa-angle-down"></i></a>
                 <ul>
-                    <li><a href="/html.html">HTML, CSS</a></li>
-                    <li><a href="/js.html">JAVASCRIPT</a></li>
-                    <li><a href="/c_sharp">C#</a></li>
+                    <li><a href="/projektas/html.html">HTML, CSS</a></li>
+                    <li><a href="/projektas/js.html">JAVASCRIPT</a></li>
+                    <li><a href="/projektas/c_sharp">C#</a></li>
                 </ul>
             </li>
             <li>
-                <a href="/contacts.html">KONTAKTAI</a>
+                <a href="/projektas/contacts.html">KONTAKTAI</a>
             </li>
 
         </ul>
