--- a/projektas/cv.html
+++ b/projektas/cv.html
@@ -109,7 +109,7 @@
                 <a href="/projektas/cv.html">CV</a>
             </li>
             <li>
-                <a href="/work_experience.html">DARBAI <i class="fas fa-angle-down"></i></a>
+                <a href="/projektas/work_experience.html">DARBAI <i class="fas fa-angle-down"></i></a>
                 <ul>
                     <li><a href="/projektas/html.html">HTML, CSS</a></li>
                     <li><a href="/projektas/js.html">JAVASCRIPT</a></li>
