--- a/projektas/html.html
+++ b/projektas/html.html
@@ -8,7 +8,9 @@
     <title>HTML+CSS</title>
     <style>
         @import url("style.css");
-
+iframe{
+    margin: 3rem;
+}
     </style>
 </head>
 
@@ -43,7 +45,7 @@
         </div>
     </header>
 
-<iframe src="/projektas/index.html" style="height:50vh;width:100vw" title="Iframe Example"></iframe>
+<iframe src="/projektas/index.html" style="height:50vh;width:90%" title="Iframe Example"></iframe>
 
 </body>
 
