--- a/projektas/contacts.html
+++ b/projektas/contacts.html
@@ -143,7 +143,7 @@
                 <ul>
                     <li><a href="/projektas/html.html">HTML, CSS</a></li>
                     <li><a href="/projektas/js.html">JAVASCRIPT</a></li>
-                    <li><a href="/projektas/c_sharp">C#</a></li>
+                    <li><a href="/projektas/c_sharp.html">C#</a></li>
                 </ul>
             </li>
             <li>
