--- a/projektas/csharp.html
+++ b/projektas/csharp.html
@@ -55,7 +55,7 @@
                 <ul>
                     <li><a href="/projektas/html.html">HTML, CSS</a></li>
                     <li><a href="/projektas/js.html">JAVASCRIPT</a></li>
-                    <li><a href="/projektas/c_sharp">C#</a></li>
+                    <li><a href="/projektas/c_sharp.html">C#</a></li>
                 </ul>
             </li>
             <li>
