--- a/projektas/cv.html
+++ b/projektas/cv.html
@@ -26,7 +26,6 @@
         }
 
         .gi {
-            /* background-color: rgba(218, 198, 198, 0.1); */
             display: grid;
             justify-items: left;
             align-items: top;
@@ -38,7 +37,7 @@
         }
 
         .Hgi {
-            font-size: 1.5rem;
+            font-size: 2.5vh;
             text-align: center;
             padding-bottom: 1rem;
             justify-items: center;
@@ -58,7 +57,6 @@
 
         .aboutme {
             grid-area: section1;
-            max-height: 10%;
         }
 
         .specialties {
@@ -103,21 +101,21 @@
     <nav class="nav">
         <ul>
             <li>
-                <a href="/projektas/index.html">PRADŽIA</a>
+                <a href="/index.html">PRADŽIA</a>
             </li>
             <li>
-                <a href="/projektas/cv.html">CV</a>
+                <a href="/cv.html">CV</a>
             </li>
             <li>
-                <a href="/projektas/work_experience.html">DARBAI <i class="fas fa-angle-down"></i></a>
+                <a href="/work_experience.html">DARBAI <i class="fas fa-angle-down"></i></a>
                 <ul>
-                    <li><a href="/projektas/html.html">HTML, CSS</a></li>
-                    <li><a href="/projektas/js.html">JAVASCRIPT</a></li>
-                    <li><a href="/projektas/c_sharp.html">C#</a></li>
+                    <li><a href="/html.html">HTML, CSS</a></li>
+                    <li><a href="/js.html">JAVASCRIPT</a></li>
+                    <li><a href="/c_sharp">C#</a></li>
                 </ul>
             </li>
             <li>
-                <a href="/projektas/contacts.html">KONTAKTAI</a>
+                <a href="/contacts.html">KONTAKTAI</a>
             </li>
 
         </ul>
@@ -133,7 +131,7 @@
         <section class="gi Hgi HaboutME"><i class="fas fa-user-edit fa-2x"></i>Apie mane</section>
         <section class="gi Hgi Hspecialties"><i class="fas fa-laptop fa-2x"></i>Specializacijos</section>
         <section class="gi Hgi Hlanguages"><i class="fas fa-globe fa-2x"></i>Kalbos</section>
-        <section class="gi aboutME">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis, reprehenderit ex qui consequuntur similique totam ad repudiandae saepe officia non dolorum suscipit ut alias nemo eaque fugiat distinctio aperiam tempore quasi quo ullam voluptatum. Voluptates, neque dolorem recusandae molestias asperiores blanditiis quam excepturi reiciendis, quasi totam ipsam quod consectetur voluptatibus.</section>
+        <section class="gi aboutME">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quibusdam dolorem ut ea obcaecati praesentium porro accusamus illum culpa consequatur sunt rerum, repellat, soluta quod tempora ab ipsam modi odio!</section>
         <section class="gi specialties">
             <ul>
                 <li>Pirma specializacija</li>
