--- a/projektas/index.html
+++ b/projektas/index.html
@@ -8,6 +8,9 @@
     <title>Sveiki!</title>
     <style>
         @import url("style.css");
+        h1 {
+            margin: 1.5rem;
+        }
     </style>
 </head>
 
