--- a/projektas/work_experience.html
+++ b/projektas/work_experience.html
@@ -106,9 +106,9 @@
         </div>
     </header>
     <main class="gc">
-        <a href="/html.html"class="gi Hgi Hhtml"></a>
-        <a href="/javascript.html"class="gi Hgi Hjs"></a>
-        <a href="/csharp.html"class="gi Hgi Hcs"></a>
+        <a href="/projektas/html.html"class="gi Hgi Hhtml"></a>
+        <a href="/projektas/js.html"class="gi Hgi Hjs"></a>
+        <a href="/projektas/c_sharp.html"class="gi Hgi Hcs"></a>
         
     </main>
 
