--- a/projektas/contacts.html
+++ b/projektas/contacts.html
@@ -12,8 +12,9 @@
         .gc::before {
             content: '';
             position: absolute;
-            top: 17%;
+            top: 9rem;
             left: 0;
+            bottom: 0;
             width: 100%;
             height: inherit;
             background: linear-gradient(123deg,
@@ -25,9 +26,7 @@
 
         .gc {
             display: grid;
-            height: 100%;
-            margin-top: 2%;
-            margin-bottom: 0;
+            margin: auto;
             justify-content: center;
             align-content: center;
             grid-template-areas:
@@ -42,24 +41,20 @@
             justify-items: left;
             align-items: top;
             padding: 1rem;
-            text-align: justify;
             color: rgba(160, 137, 127, 0.604);
             text-shadow: 1px 1px rgba(255, 255, 255, 0.6);
-
             width: 100%;
-            height: 100%;
+            height: 75vh;
             border-radius: 25px;
-            margin: auto;
             position: relative;
-
             background: linear-gradient(135deg,
                     rgba(255, 255, 255, 0.6) 0%,
                     rgba(168, 145, 135, 0.233) 42%,
                     rgba(160, 137, 127, 0.604) 100%);
-
             text-align: center;
             justify-items: center;
             overflow: auto;
+            margin-top: 2rem;
         }
 
         section {
@@ -105,15 +100,6 @@
             color: rgba(255, 255, 255, 0.6);
             text-shadow: none;
         }
-
-                /* .Hgi:hover {
-            opacity: 1;
-            transition: 0.2s ease;
-        }
-
-        .Hgi:not(:hover) {
-            transition: 0.2s ease;
-        } */
 
         .address {
             grid-area: header1;
