--- a/projektas/html.html
+++ b/projektas/html.html
@@ -9,7 +9,7 @@
     <style>
         @import url("style.css");
 iframe{
-    margin: 3rem;
+    margin: 2rem 5%;
 }
     </style>
 </head>
@@ -45,7 +45,7 @@ iframe{
         </div>
     </header>
 
-<iframe src="/projektas/index.html" style="height:50vh;width:90%" title="Iframe Example"></iframe>
+<iframe src="/projektas/index.html" style="height:70vh;width:90%" title="Iframe Example"></iframe>
 
 </body>
 
