--- a/projektas/work_experience.html
+++ b/projektas/work_experience.html
@@ -12,8 +12,7 @@
         .gc {
             display: grid;
             height: 70vh;
-            margin-top: 3rem;
-            margin-bottom: 1 rem;
+            margin: 5% auto;
             justify-content: center;
             grid-template-areas:
                 "header1 header2 header3";
