--- a/projektas/c_sharp.html
+++ b/projektas/c_sharp.html
@@ -16,9 +16,9 @@
             color: #fff;
             background: linear-gradient(-45deg,
                     #ee7752,
-                    #e73c7e,
-                    #23a6d5,
-                    #23d5ab);
+                    #e73c3c,
+                    #ecd79b,
+                    #ffffff);
             background-size: 400% 400%;
             position: relative;
             animation: change 10s ease-in-out infinite;
