--- a/projektas/js.html
+++ b/projektas/js.html
@@ -14,6 +14,8 @@
             height: 84vh;
             width: 100%;
             color: #fff;
+            text-shadow: 1px 1px 2px #ee7752;
+            font-weight: bold;
             background: linear-gradient(-45deg,
                     #ee7752,
                     #e73c3c,
