--- a/projektas/contacts.html
+++ b/projektas/contacts.html
@@ -42,7 +42,7 @@
             align-items: top;
             padding: 1rem;
             color: rgba(160, 137, 127, 0.604);
-            text-shadow: 1px 1px rgba(255, 255, 255, 0.6);
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.6);
             width: 100%;
             height: 75vh;
             border-radius: 25px;
@@ -78,7 +78,7 @@
             border: 2px solid rgba(255, 255, 255, 0.6);
             border-radius: 10px;
             padding: 0.7rem;
-            box-shadow: 5px 5px rgb(160, 137, 127);
+            box-shadow: 5px 5px 2px  rgb(160, 137, 127);
 
         }
         .website:hover {
@@ -90,7 +90,7 @@
         .email:visited {
             /* text-decoration: underline; */
             color: rgb(160, 137, 127);
-            text-shadow: 1px 1px rgba(255, 255, 255, 0.6);
+            text-shadow: 1px 1px 2px  rgba(255, 255, 255, 0.6);
         }
         .social {
             line-height: 10rem;
