--- a/pages/terms.html
+++ b/pages/terms.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="../index.html">Go to previous page!</a>
+        <a href="../old.html">Go to previous page!</a>
         <p>This is the terms and conditions page!</p>
     </nav>
 </body>
