--- a/HTMLExamples/cvSuTAB(mine).html
+++ b/HTMLExamples/cvSuTAB(mine).html
@@ -111,7 +111,7 @@
         }
 
         .skills ul li .skill_item .icon {
-            background: url("IMG/sprite.png") no-repeat -1px 0;
+            background: url("sprite.png") no-repeat -1px 0;
             width: 20px;
             height: 22px;
             margin: 0 auto 5px;
@@ -274,7 +274,7 @@
 
             <div class="profile_info">
                 <div class="profile_img">
-                    <img src="IMG/unnamed.png" alt="profile_img">
+                    <img src="unnamed.png" alt="profile_img">
                 </div>
                 <div class="profile_data">
                     <p class="name">Rita A.</p>
