--- a/work_experience.html
+++ b/work_experience.html
@@ -152,9 +152,9 @@
         </div>
     </header>
     <main class="gc">
-        <a href="/projektas/html.html" class="gi Hgi Hhtml"></a>
-        <a href="/projektas/js.html" class="gi Hgi Hjs"></a>
-        <a href="/projektas/c_sharp.html" class="gi Hgi Hcs"></a>
+        <a href="/html.html" class="gi Hgi Hhtml"></a>
+        <a href="/js.html" class="gi Hgi Hjs"></a>
+        <a href="/c_sharp.html" class="gi Hgi Hcs"></a>
 
     </main>
 
