--- a/contacts.html
+++ b/contacts.html
@@ -249,7 +249,7 @@
                 <i class="fas fa-phone-alt fa-4x" id="icon"></i>
                 <section>+3706****370</section>
                 <i class="fas fa-globe-europe fa-4x" id="icon"></i>
-                <section><a href="https://ritzyra.github.io/projektas/index.html" class="website">RitzyRA website</a>
+                <section><a href="https://ritzyra.github.io/index.html" class="website">RitzyRA website</a>
                 </section>
             </article>
         </section>
