Corrected iframe src

--- a/html.html
+++ b/html.html
@@ -74,7 +74,7 @@ iframe{
         </div>
     </header>
 
-<iframe src="/projektas/index.html" style="height:70vh;width:90%;" title="Iframe Example"></iframe>
+<iframe src="/index.html" style="height:70vh;width:90%;" title="Iframe Example"></iframe>
 
 </body>
 
