Updated and personalized

--- a/c_sharp.html
+++ b/c_sharp.html
@@ -107,7 +107,11 @@
     <section class="aurora">
     </section>
     <section class="textonly">
-        To be continued...
+        <a href="https://github.com/RitzyRA?tab=repositories">Find some C# coding in my GitHub repositories!
+            <br>
+            <br>
+            <img src="/QRRepos.PNG" />
+        </a>
     </section>
 
 </body>
