--- a/contacts.html
+++ b/contacts.html
@@ -79,6 +79,12 @@
             border-radius: 10px;
             padding: 0.7rem;
             box-shadow: 5px 5px 2px rgb(160, 137, 127);
+            justify-self: center;
+            align-self: center;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
 
         }
 
@@ -246,21 +252,19 @@
         </section>
         <section class="gi phone_web">
             <article>
-                <i class="fas fa-phone-alt fa-4x" id="icon"></i>
-                <section>+3706****370</section>
                 <i class="fas fa-globe-europe fa-4x" id="icon"></i>
-                <section><a href="https://ritzyra.github.io/index.html" class="website">RitzyRA website</a>
+                <section><a href="https://ritzyra.github.io/" class="website">RitzyRA website</a>
+                </section>
+                <i class="fab fa-github fa-4x" id="icon"></i>
+                <section><a href="https://github.com/RitzyRA?tab=repositories" class="website">GitHub Repositories</a>
                 </section>
             </article>
         </section>
         <section class="gi email_social">
             <article>
                 <i class="fas fa-at fa-4x" id="icon"></i>
-                <section><a href="sendto:vardas.pavarde@gmail.com" class="email">vardas.pavarde@gmail.com</a></section>
-                <a href="http://www.facebook.com" class="email social"><i class="fab fa-facebook-square fa-3x"></i></a>
-                <a href="http://www.twitter.com" class="email social"><i class="fab fa-twitter-square fa-3x"></i></a>
-                <a href="http://www.instagram.com" class="email social"><i
-                        class="fab fa-instagram-square fa-3x"></i></a>
+                <section><a href="mailto:vardas.pavarde@gmail.com" class="email">rita.audejaitiene@gmail.com</a></section>
+                <a href="https://www.linkedin.com/in/rita-audėjaitienė-8964b045" class="email social"><i class="fab fa-linkedin fa-3x"></i></a>
             </article>
         </section>
     </main>
