--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 
         .gc {
             display: grid;
-            height: 72vh;
+            height: 71vh;
             margin-top: 1rem;
             margin-bottom: 1rem;
             justify-content: center;
@@ -34,12 +34,13 @@
             font-size: 0.8rem;
             color: #a0897f;
             overflow: auto;
+            padding-top: 0.5rem;
         }
 
         .Hgi {
             font-size: 2.5vh;
             text-align: center;
-            padding-bottom: 1rem;
+            padding: 0.5rem;
             justify-items: center;
         }
 
@@ -206,13 +207,17 @@
         <section class="gi Hgi HaboutME"><i class="fas fa-user-edit fa-2x"></i>Apie mane</section>
         <section class="gi Hgi Hspecialties"><i class="fas fa-laptop fa-2x"></i>Specializacijos</section>
         <section class="gi Hgi Hlanguages"><i class="fas fa-globe fa-2x"></i>Kalbos</section>
-        <section class="gi aboutME">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae quibusdam dolorem ut ea obcaecati praesentium porro accusamus illum culpa consequatur sunt rerum, repellat, soluta quod tempora ab ipsam modi odio!</section>
+        <section class="gi aboutME"><p style="font-size: 0.8rem; text-indent: 10%;">Esu itin <b>imli naujovėms</b>, <b>atsakinga</b>, <b>punktuali</b>, galiu <b>išmokti viską</b>, ko reikia naujai specialybei, pasižymiu
+            <b>loginiu mąstymu</b>, turiu didžiulį norą bei <b>daug motyvacijos tobulėti</b> pasirinktoje srityje</p>
+        </section>
         <section class="gi specialties">
             <ul>
-                <li>Pirma specializacija</li>
-                <li>Antra specializacija</li>
-                <li>Trečia specializacija</li>
-                <li>Ketvirta specializacija</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JavaScript</li>
+                <li>Microsoft SQL Server</li>
+                <li>C#</li>
+                <li>.NET</li>
             </ul>
         </section>
         <section class="gi languages">
@@ -222,41 +227,42 @@
                 <li>Vokiečių - pagrindai</li>
             </ul>
         </section>
-        <section class="gi Hgi Hskills"><i class="fas fa-trophy fa-2x"></i>Įgūdžiai</section>
+        <section class="gi Hgi Hskills"><i class="fas fa-trophy fa-2x"></i>Papildomi įgūdžiai</section>
         <section class="gi Hgi Heducation"><i class="fas fa-briefcase fa-2x"></i>Išsilavinimas ir darbo patirtis</section>
         <section class="gi Hgi Hhobbies"><i class="far fa-thumbs-up fa-2x"></i>Pomėgiai</section>
         <section class="gi skills">
             <ul>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-                <li>C#</li>
-                <li>.NET</li>
+                <li>Windows XP, 7, 10</li>
+                <li>Visual Studio 2019</li>
+                <li>Visual Studio Code</li>
+                <li>Microsoft SQL Server Management Studio 18</li>
+                <li>Vairuotojo pažymėjimas (B kategorijos)</li>
+                <li>...</li>
             </ul>
         </section>
         <section class="gi education">
             <ul>
-                <li>2021 04 - 2021 11</li>
+                <li>2021 04 - dabar (iki 2021 11)</li>
                 <section>UAB Baltijos technologijų institutas</section>
                 <li>2018 06 - dabar</li>
-                <section>Įmonė3</section>
-                <li>2014 - 2018</li>
-                <section>Įmonė2</section>
-                <li>2011 - 2014</li>
-                <section>Įmonė1</section>
+                <section>Projekto dalies vadovė</section>
+                <li>2014 10 - 2018 06</li>
+                <section>Statybinės, konstrukcinės dalies projektuotoja</section>
+                <li>2011 08 - 2014 10</li>
+                <section>Statybos inžinierė</section>
                 <li>2011 - 2013</li>
                 <section>KTU - Magistras</section>
                 <li>2007 - 2011</li>
                 <section>KTU - Bakalauras</section>
-                <li>2007</li>
+                <li>1995 - 2007</li>
                 <section>Gimnazija</section>
             </ul>
         </section>
         <section class="gi hobbies">
             <i class="fas inline fa-tv fa-2x"></i> <section>TV, serialai</section>           
+            <i class="inline fas fa-brain fa-2x"></i><section>Protmūšiai</section>
             <i class="fas inline fa-book-open fa-2x"></i><section>Knygos</section>
             <i class="fas inline fa-car-alt fa-2x"></i><section>Vairavimas, kelionės</section>
-        
         </section>
         
     </main>
