--- a/js.html
+++ b/js.html
@@ -25,6 +25,7 @@
             position: relative;
             animation: change 10s ease-in-out infinite;
             align-items: center;
+            font-size: larger;
         }
         @keyframes change {
             0% {
@@ -104,7 +105,8 @@
     </header>
 
 <section>
-    To be continued...
+    Shopping List (saving in Local Storage)
+    <iframe src="https://ritzyra.github.io/ShoppingListFromLocalStorage/" style="height:70vh;width:90%; margin: auto;" title="Iframe Example"></iframe>
 </section>
 
 </body>
