--- a/work_experience.html
+++ b/work_experience.html
@@ -132,9 +132,9 @@
             <li>
                 <a href="/work_experience.html">DARBAI <i class="fas fa-angle-down"></i></a>
                 <ul>
-                    <li><a href="/html.html">HTML, CSS</a></li>
-                    <li><a href="/js.html">JAVASCRIPT</a></li>
-                    <li><a href="/c_sharp.html">C#</a></li>
+                    <li><a href="/html.html" style="text-indent: 2rem;">HTML, CSS</a></li>
+                    <li><a href="/js.html" style="text-indent: 2rem;">JAVASCRIPT</a></li>
+                    <li><a href="/c_sharp.html" style="text-indent: 2rem;">C#</a></li>
                 </ul>
             </li>
             <li>
