--- a/cv.html
+++ b/cv.html
@@ -229,29 +229,29 @@
         <section class="gi skills">
             <ul>
                 <li>Windows XP, 7, 10</li>
-                <li>Visual Studio 2019</li>
-                <li>Visual Studio Code</li>
+                <li>Visual Studio, Visual Studio Code</li>
                 <li>Microsoft SQL Server Management Studio 18</li>
+                <li>Postgres, EF Core</li>
+                <li>Postman</li>
+                <li>RESTful API</li>
+                <li>Microservice architecture</li>
+                <li>Git, Redis, Kafka, a bit of Docker, Lens</li>
                 <li>Vairuotojo pažymėjimas (B kategorijos)</li>
                 <li>...</li>
             </ul>
         </section>
         <section class="gi education">
             <ul>
-                <li>2021 04 - dabar (iki 2021 11)</li>
+                <li><b>2021 11 - dabar</b></li>
+                <section><b>.NET programuotoja</b></section>
+                <li>2021 04 - 2021 11</li>
                 <section>UAB Baltijos technologijų institutas</section>
-                <li>2018 06 - dabar</li>
-                <section>Projekto dalies vadovė</section>
-                <li>2014 10 - 2018 06</li>
-                <section>Statybinės, konstrukcinės dalies projektuotoja</section>
-                <li>2011 08 - 2014 10</li>
-                <section>Statybos inžinierė</section>
+                <li>2011 08 - 2022 03</li>
+                <section>Statybos inžinerijos sritis</section>
                 <li>2011 - 2013</li>
                 <section>KTU - Magistras</section>
                 <li>2007 - 2011</li>
                 <section>KTU - Bakalauras</section>
-                <li>1995 - 2007</li>
-                <section>Gimnazija</section>
             </ul>
         </section>
         <section class="gi hobbies">
@@ -260,6 +260,7 @@
                 <li>Protmūšiai</li>
                 <li>Knygos</li>
                 <li>Vairavimas, kelionės</li>
+                <li>Stalo žaidimai</li>
             </ul>
         </section>
         
